[package]
name = "rust-gpt"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
spinners = "4.1.1"
tokio = { version = "1.47.1", features = ["full"] }
